fix swagger comments
