# docs/swagger.yaml
@@ -466,19 +466,19 @@ paths:
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/rest.sErr'
+            $ref: '#/definitions/rest.errResponse'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/rest.sErr'
+            $ref: '#/definitions/rest.errResponse'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/rest.sErr'
+            $ref: '#/definitions/rest.errResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/rest.sErr'
+            $ref: '#/definitions/rest.errResponse'
       summary: Получение уроков курса
       tags:
       - course
@@ -713,15 +713,15 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/rest.sErr'
+            $ref: '#/definitions/rest.errResponse'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/rest.sErr'
+            $ref: '#/definitions/rest.errResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/rest.sErr'
+            $ref: '#/definitions/rest.errResponse'
       summary: Создание урока
       tags:
       - lessons
@@ -741,23 +741,23 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/rest.sErr'
+            $ref: '#/definitions/rest.errResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/rest.sErr'
+            $ref: '#/definitions/rest.errResponse'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/rest.sErr'
+            $ref: '#/definitions/rest.errResponse'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/rest.sErr'
+            $ref: '#/definitions/rest.errResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/rest.sErr'
+            $ref: '#/definitions/rest.errResponse'
       summary: Получение урока
       tags:
       - lessons
@@ -786,19 +786,19 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/rest.sErr'
+            $ref: '#/definitions/rest.errResponse'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/rest.sErr'
+            $ref: '#/definitions/rest.errResponse'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/rest.sErr'
+            $ref: '#/definitions/rest.errResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/rest.sErr'
+            $ref: '#/definitions/rest.errResponse'
       summary: Обновление статуса прогресса у урока
       tags:
       - lessons
